进一步修改

--- a/html/table.html
+++ b/html/table.html
@@ -9,15 +9,16 @@
     <div id="table-area">
         <table id="table">
             <tr>
-                <th></th>
                 <th>1</th>
                 <th>1</th>
                 <th>1</th>
                 <th>1</th>
             </tr>
         </table>
+        <div style="clear:both"></div>
     </div>
     <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="../js/jquery-table.js"></script>
+    <script type="text/javascript" src="../js/table.js"></script>
 </body>
 </html>
